# friday

./: .gitignore  .pre-commit-config.yaml  README.md  agent_friday.py  env.example  friday.project.json  main.py  openclaw-research-summary.md  pyproject.toml  server.py  test_code.py
.claude/: settings.local.json
.github/workflows/: ci.yml
.pytest_tmp/test_build_inline_summary_incl0/: conversation_history.json
.pytest_tmp/test_build_inline_summary_incl1/: conversation_history.json  session_summary.json
.pytest_tmp/test_build_inline_summary_incl2/: session_summary.json
.pytest_tmp/test_clear_all_on_empty_is_saf0/: conversation_history.json
.pytest_tmp/test_clear_all_removes_history0/: conversation_history.json
config/: permissions.yaml
docs/: ARCHITECTURE.md  PLUGIN_SYSTEM.md  SECURITY.md  TOOLS.md  WORKFLOWS.md  computer_use_repo_survey.md
friday/: codex_bridge.py  config.py  healthcheck.py  local_chat.py  logger.py  path_utils.py  project_manifest.py  sdk.py  subprocess_utils.py  web_ui.py
friday/browser/: __init__.py  (+8 more)
tests/: conftest.py  test_cache.py  test_command_pipeline.py  test_config.py  test_config_status.py  test_context_manager.py  test_desktop_runtime.py  test_diagnostics.py  test_error_handling.py  test_full_control_architecture.py  test_healthcheck.py  test_integrations_registry.py  test_local_chat.py  test_operator.py  test_operator_loop.py  test_permissions.py  test_pipeline.py  test_project_manifest.py  test_server.py  test_tool_registry.py  test_universal_browser_operator.py  test_universal_desktop_operator.py  test_universal_goal_executor.py  test_utils.py  test_voice_memory.py  test_web.py  test_web_ui_status.py  test_workflow_orchestrator.py
ui_sphere_concept/: index.html
workspace/: event_Team_Meeting_20251201_1000.ics  verify_workflows.py
(+229 files in other folders)
