[project]
name = "friday-tony-stark-demo"
version = "0.1.0"
description = "Friday — A Tony Stark-inspired MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "livekit-agents[deepgram,groq,openai,sarvam,silero]>=1.5.1",
    "livekit-plugins-google>=1.5.1",
    "pypdf",
    "python-dotenv",
    "pyautogui",
    "playwright>=1.40.0",
    "PyYAML",
    "trafilatura",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.1",
]

[project.scripts]
friday = "server:main"
friday_voice = "agent_friday:dev" # Points to the wrapper
friday_healthcheck = "friday.healthcheck:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["friday"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
"agent_friday.py" = "agent_friday.py"
